add ebextension deploy

--- a/.ebextensions/02_installEPELPackages.config
+++ b/.ebextensions/02_installEPELPackages.config
@@ -1,3 +1,13 @@
 packages:
   yum:
-    chromium: []
+    libXcomposite: []
+    libXdamage: []
+    libXrandr: []
+    libxkbcommon: []
+    pango: []
+    alsa-lib: []
+    atk: []
+    at-spi2-atk: []
+    cups-libs: []
+    libdrm: []
+    mesa-libgbm: []
