--- a/.ebextensions/01_enableEPEL.config
+++ b/.ebextensions/01_enableEPEL.config
@@ -1,3 +1,7 @@
 commands:
-  01_enableEPEL:
-    command: sudo amazon-linux-extras install epel -y
+  02_downloadChrome:
+    command: curl -o /tmp/chrome.rpm https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm
+  03_installChrome:
+    command: sudo dnf install -y /tmp/chrome.rpm
+  04_cleanup:
+    command: rm /tmp/chrome.rpm
