--- a/.ebextensions/02_installEPELPackages.config
+++ b/.ebextensions/02_installEPELPackages.config
@@ -3,6 +3,7 @@ packages:
     libXcomposite: []
     libXdamage: []
     libXrandr: []
+    libgbm: []
     libxkbcommon: []
     pango: []
     alsa-lib: []
@@ -10,4 +11,5 @@ packages:
     at-spi2-atk: []
     cups-libs: []
     libdrm: []
-    mesa-libgbm: []
+    nss: []
+    libXScrnSaver: []
